objects/SDO_SFS_Vehicle_Inspection__c.object
<CustomObject>
    <description>What: Part of Field Service Demo for Vehicle Inspection.</description>
    <fields>
        <fullName>Body_Condition__c</fullName>
        <label>Body Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accident Damaged</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_All_Lights_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm All Lights Working</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_All_Wipers_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm All Wipers Working</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Front_Driver_Tyre_Depth__c</fullName>
        <label>Front Driver Tire Depth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 mm</fullName>
                </value>
                <value>
                    <fullName>2 - 5 mm</fullName>
                </value>
                <value>
                    <fullName>&gt; 5mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Front_Passenger_Tyre_Depth__c</fullName>
        <label>Front Passenger Tire Depth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 mm</fullName>
                </value>
                <value>
                    <fullName>2 - 5 mm</fullName>
                </value>
                <value>
                    <fullName>&gt; 5 mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Odometer_Reading__c</fullName>
        <label>Odometer Reading</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rear_Driver_Tyre_Depth__c</fullName>
        <label>Rear Driver Tire Depth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 mm</fullName>
                </value>
                <value>
                    <fullName>2 - 5 mm</fullName>
                </value>
                <value>
                    <fullName>&gt; 5 mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rear_Passenger_Tyre_Depth__c</fullName>
        <label>Rear Passenger Tire Depth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 mm</fullName>
                </value>
                <value>
                    <fullName>2 - 5 mm</fullName>
                </value>
                <value>
                    <fullName>&gt; 5 mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Vehicle Inspections</relationshipLabel>
        <relationshipName>Vehicle_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration__c</fullName>
        <label>Vehicle Registration</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Vehicle Inspection</label>
    <nameField>
        <displayFormat>VI-{0000}</displayFormat>
        <label>Vehicle Inspection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>